--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
-rpi-lgpio==0.6
+Adafruit-Blinka==8.62.0
+adafruit-circuitpython-74hc595==1.4.8
 adafruit-circuitpython-ahtx0==1.0.20
+adafruit-circuitpython-busdevice==5.2.13
 adafruit-circuitpython-charlcd==3.4.12
-adafruit-blinka==8.62.0
+adafruit-circuitpython-connectionmanager==3.1.5
+adafruit-circuitpython-mcp230xx==2.5.18
+adafruit-circuitpython-register==1.10.4
+adafruit-circuitpython-requests==4.1.13
+adafruit-circuitpython-typing==1.12.1
+Adafruit-PlatformDetect==3.81.0
 Adafruit-PureIO==1.1.11
+binho-host-adapter==0.1.6
+lgpio==0.2.2.0
+paho-mqtt==2.1.0
+pyftdi==0.57.1
+pyserial==3.5
+pyusb==1.3.1
+rpi-lgpio==0.6
+sysv_ipc==1.1.0
+typing_extensions==4.14.1
